seperate tests, and fortify structure